# Media-Reorder

./: .gitignore  README.md  dates.py  organize.py  pyproject.toml  reorder.py  search.py
.atl/: .skill-registry.cache.json  skill-registry.md
CLI/: __init__.py  cli.py  dates.py  db.py  organize.py  search.py  sidecar.py
openspec/: config.yaml
openspec/changes/archive/2026-07-18-cli-media-organizer/: design.md  proposal.md  state.yaml  tasks.md
openspec/changes/archive/2026-07-18-cli-media-organizer/specs/architecture/: spec.md
openspec/changes/archive/2026-07-18-cli-media-organizer/specs/file-discovery/: spec.md
openspec/changes/gui-media-organizer/: design.md  proposal.md  state.yaml  tasks.md
openspec/changes/gui-media-organizer/specs/architecture/: spec.md
openspec/changes/gui-media-organizer/specs/backup/: spec.md
openspec/changes/gui-media-organizer/specs/file-discovery/: spec.md
openspec/changes/gui-media-organizer/specs/file-tree/: spec.md
openspec/changes/gui-media-organizer/specs/google-drive-import/: spec.md
openspec/changes/gui-media-organizer/specs/media-viewer/: spec.md
openspec/changes/gui-media-organizer/specs/tags/: spec.md
openspec/specs/architecture/: spec.md
openspec/specs/file-discovery/: spec.md
openspec/specs/google-drive-import/: spec.md
schema/: schema.sql
test/: get_meta.py  test_integrity.py
tests/: test_dates.py  test_dates_refactor.py  test_db.py  test_integrity.py  test_security.py  test_sidecar.py  verify_db_path.py
(+1 files in other folders)
